test/corpus/basics.txt
======================
String literal
======================

{{ 'Hello' }}

---

(template
  (output_directive
    (code
      (string))))

======================
Number literal
======================

{{ 10 }}

---

(template
  (output_directive
    (code
      (number))))

======================
Boolean literal
======================

{{ true }}

---

(template
  (output_directive
    (code
      (boolean))))

======================
Identifier with fields
======================

{{ page.section.title }}

---

(template
  (output_directive
    (code
      (selector_expression
        operand: (identifier)
        field: (identifier)
        field: (identifier)))))

======================
Identifier
======================

{{ page }}

---

(template
  (output_directive
    (code
      (identifier))))
